margin was broken on everything except firefox... ugly fix. Did I also fix the mobile version showing the margin text on top?

--- a/static/css/styleHome.css
+++ b/static/css/styleHome.css
@@ -14,6 +14,7 @@ body {
   background-color: #F0F8FF;
   background-color: #FFFFFF;
   min-height: 100%;
+  height: 100%;
   max-width: 100%;
   padding: 0;
   margin: 0;
@@ -377,15 +378,27 @@ aside {
 
 @media only screen and (min-device-width:480px) {
 
+	.row{
+		height:100%;
+		min-height: 100%;
+	}
 	.column {
+		height: 100%;
+		min-height: 100%;
 		float: left;
 		padding: 0px;
 		box-sizing: border-box;
+		height: auto !important;
 		
 	}
 	.left, .right {
 		/*border:1px solid black;*/
+		padding: 0px;
+		margin: 0px;
+		margin-left: auto;
+		margin-right: auto;
 		height: 100%;
+		min-height: 2050px; 
 		width: 10%;
 		box-sizing: border-box;
 		background-color: #F5F5F5;
@@ -429,6 +442,10 @@ aside {
     width: 480px;
   }
 
+  .left p .right p {
+	  height: 0px;
+	  max-height: 0px;
+  }
 .page1 {
   display: flex;
   flex-direction: column;
